--- a/TreasureBox.css
+++ b/TreasureBox.css
@@ -236,12 +236,17 @@ body{
 }
 
 #li:hover{
-  background-color: rrgb(211, 39, 39);
+  background-color: rgb(211, 39, 39);
   color: white;
 }
 
 a{
   text-decoration: none;
+}
+
+
+#ppp:hover{
+  background-color: rgb(78, 67, 54);
 }
 
 
@@ -340,7 +345,120 @@ a{
     align-items: center;
     margin-left: 20px;
   }
-
-
-
 }
+
+
+@media screen and (max-width: 415px){
+  .header{
+    margin-left: -140px;
+    height: 10px;
+    font-size: 10px;
+  }
+
+
+  .jjj{
+    height: 100px;
+    margin-top: 100px;
+  }
+
+  .game{
+    width: 80px;
+    margin-left: 170px;
+  }
+
+  .game p{
+    margin-top: 20px;
+  }
+
+
+  .info{
+    width: 270px;
+    
+  }
+
+  .info div{
+    padding: 1.5%;
+    width: 50px;
+    height: 10px;
+  }
+
+
+  .kipon{
+    display: none;
+  }
+
+  .info2{
+    margin-left: -1px;
+  }
+  
+
+  #imgg4{
+    width: 360px;
+  }
+
+
+  #screen{
+    margin-left: 17px;
+  }
+
+
+ .imgg4{
+  display: none;
+ }
+
+
+  .reviews{
+    display: inline;
+  }
+
+
+  .img3{
+    margin-left: 20px;
+  }
+
+
+  .kkk{
+    width: 400px;
+    margin-left: -16px;
+    
+  }
+
+
+  .kkk div{
+    height: 400px;
+  }
+
+
+
+  .info3{
+    margin-left: -510px;
+    width: 400px;
+    height: 200px;
+  }
+
+  .appstore p{
+    width: 400px;
+  }
+
+  .appstore img{
+    margin-top: -50px;
+  }
+
+  .game2{
+    display: none;
+  
+  }
+
+
+  #hrr{
+    display: none;
+
+  }
+
+
+  .tbl{
+    display: none;
+  }
+}
+
+
