--- a/kipon.css
+++ b/kipon.css
@@ -357,9 +357,115 @@ a{
 
 
 
-  @media screen and (width: 391px){
-    .header{
-      display: none;
-    }
+@media screen and (max-width: 415px){
+  .header{
+    margin-left: -125px;
+    height: 10px;
+    font-size: 10px;
   }
+
+
+  .game{
+    width: 100px;
+    margin-left: 170px;
+  }
+
+  #mainphoto{
+    height: 300px;
+  }
+
+  .info{
+    width: 270px;
+    
+  }
+
+  .info div{
+    padding: 1.5%;
+    width: 50px;
+    height: 10px;
+  }
+
+
+  .kipon{
+    display: none;
+  }
+
+  #photo{
+    display: inline;
+  }
+  
+
+  .info2{
+    margin-left: 1%;
+  }
+  
+
+  #imgg4{
+    width: 360px;
+  }
+
+
+  #screen{
+    margin-left: 17px;
+  }
+
+
+ .imgg4{
+  display: none;
+ }
+
+
+  .reviews{
+    display: inline;
+  }
+
+
+  .img3{
+    margin-left: 20px;
+  }
+
+
+  .kkk{
+    width: 400px;
+    margin-left: -16px;
+    
+  }
+
+
+  .kkk div{
+    height: 630px;
+  }
+
+
+
+  .info3{
+    margin-left: -510px;
+    width: 400px;
+    height: 200px;
+  }
+
+  .appstore p{
+    width: 400px;
+  }
+
+  .appstore img{
+    margin-top: -50px;
+  }
+
+  .game2{
+    display: none;
+  
+  }
+
+
+  #hrr{
+    display: none;
+
+  }
+
+
+  .tbl{
+    display: none;
+  }
+}
 
