--- a/robotrix.css
+++ b/robotrix.css
@@ -275,7 +275,7 @@ a{
 }
 
 
-@media screen and (width: 820px) {
+@media screen and (max-width: 820px) {
 
 
   body{
@@ -286,15 +286,13 @@ a{
   }
 
   .game{
-    margin-left: 50px;
+    margin-left: 550px;
   }
 
   .info{
     margin-left: 70px;
     position: absolute;
   }
-
-  
 
   #photo{
     display: block;
@@ -307,7 +305,6 @@ a{
   .reviews{
     margin-left: -30px;
   }
-
 
   .kkk div{
     border-style: solid;
@@ -323,7 +320,7 @@ a{
     margin-top: 300px;
     background-color: white;
     
-    margin-left: -250px;
+    margin-left: 150px;
     height: 300px;
     width: 500px;
     padding: 2%;
@@ -336,7 +333,7 @@ a{
   }
   
   .game2{
-    margin-left: 30px;
+    margin-left: 320px;
   }
   .stores{
     display: flex;
@@ -373,5 +370,33 @@ a{
   }
 
 }
+
+@media screen and (min-width: 413px) {
+  .reviews{
+    margin-left: -1000px;
+  }
+
+
+  .info{
+    width: 300px;
+    position: absolute;
+    height: 50px;
+    margin-left: 50px;
+  }
+
+  .info div{
+    padding: 2%;
+  }
+
+
+  .game{
+    margin-left: 120px;
+    margin-top: 90px;
+  }
+
+
+  
+}
+
 
 
